<resources>
    <string name="app_name">Gta San Online Launcher</string>

    <string name="new_hud">New HUD (GTA Online style)</string>
    <string name="connecting_to_server">Connecting to server…</string>
    <string name="online">ONLINE</string>
    <string name="server_1">Server 1</string>
    <string name="server_2">Server 2</string>
    <string name="server_3">Server 3</string>
    <string name="server1_name_default">My Server 1</string>
    <string name="server2_name_default">Coming Soon</string>
    <string name="server3_name_default">Coming Soon</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="nickname_hint">Nickname...</string>
    <string name="force_update">UPDATE</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="coming_soon_message">This feature is not yet available. Stay tuned!</string>
    <string name="connecting">Connecting…</string>
    <string name="server_offline_msg">Could not connect to server. Please try again later.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">123</string>
    <string name="recyclerview">123</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="alyn_sa_mp">Gta San Online</string>
    <string name="mobile">Mobile</string>
    <string name="add_server">Add Server</string>
    <string name="host_port">HOST:PORT</string>
    <string name="ic_round">ic round</string>
    <string name="changes">Changes</string>
    <string name="discord">Discord</string>
    <string name="website">Website</string>
    <string name="github">GitHub</string>
    <string name="preview">Preview</string>
    <string name="search">Search...</string>
    <string name="todo">TODO</string>
    <string name="sa_mp_version">SA-MP Version</string>
    <string name="select">Select</string>
    <string name="system_keyboard">System Keyboard</string>
    <string name="display_fps">Display FPS</string>
    <string name="full_screen_mode">Full Screen Mode</string>
    <string name="voice_chat">Voice Chat</string>
    <string name="chat_timestamp">Chat Timestamp</string>
    <string name="modify_game_files">Modify Game Files</string>
    <string name="cleo_scripts">CLEO Scripts</string>
    <string name="aml_scripts">AML Scripts</string>
    <string name="monetloader_scripts">MonetLoader Scripts</string>
    <string name="modloader">Modloader</string>
    <string name="game_files_type">Game Files Type</string>
    <string name="chat_strings">Chat Strings</string>
    <string name="chat_position">Chat Position</string>
    <string name="chat_size">Chat Size</string>
    <string name="reset">RESET</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="more_details">Can\'t find an answer? Join our community and ask us!</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="rate_us">If you are enjoying our app, would you mind rating us?</string>
    <string name="maybe_later">Maybe later</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="title">Title</string>
    <string name="become_a_partner">Do you want to add your Server here? Contact us!</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="_0_3_7">0.3.7</string>
    <string name="dropdown_arrow">Dropdown Arrow</string>
    <string name="_5_20">5-20</string>
    <string name="full">FULL</string>
    <string name="partners_servers">Partner Servers</string>
    <string name="favorite_servers">Your Favorite Servers</string>
    <string name="game_version">Game Version</string>
    <string name="mod_loader">Mod Loader</string>
    <string name="checking_for_updates_please_wait">CHECKING FOR UPDATES, PLEASE WAIT...</string>
    <string name="ahahaha">ahahaha</string>
    <string name="please_do_not_minimize_or_close_app_while_downloading">Please do not minimize or close app while downloading!</string>
    <string name="updating_game">Updating game...</string>
    <string name="_0">0%</string>
    <string name="none">none</string>
    <string name="_0_mb_0_mb">0 MB / 0 MB</string>

    <string name="choose_server">CHOOSE SERVER</string>
    <string name="connect">CONNECT</string>
    <string name="players_online_format">%1$s / %2$s online</string>
    <string name="players_online_unknown">Server offline</string>
    <string name="checking_players">Checking…</string>
    <string name="players_count_format">%1$s/%2$s</string>
    <string name="players_count_unknown">--/--</string>
    <string name="back">BACK</string>
    <string name="tap_to_choose_server">Tap to change server</string>
</resources>
