<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    android:background="#000000"
    android:orientation="horizontal"
    android:padding="@dimen/_10sdp"
    android:weightSum="10">

    <!-- Card grande: Servidor 1 (funcional) -->
    <androidx.cardview.widget.CardView
        android:id="@+id/server1_card"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:layout_marginEnd="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardBackgroundColor="#1A1A1A">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/server1_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/server1_bg"
                android:contentDescription="@string/server_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/tag_new_bg"
                android:fontFamily="@font/montserrat_bold"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="@string/online"
                android:textColor="#000000"
                android:textSize="@dimen/_9ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/_12sdp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/server1_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/server1_name_default"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/server1_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="sans-serif"
                    android:text="@string/tap_to_connect"
                    android:textColor="#CCCCCC"
                    android:textSize="@dimen/_11ssp" />
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Coluna direita: Servidor 2 e 3 (em breve) -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/server2_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_4sdp"
            app:cardBackgroundColor="#1A1A1A">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:scaleType="centerCrop"
                    android:src="@drawable/server2_bg"
                    android:contentDescription="@string/server_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/tag_soon_bg"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:text="@string/coming_soon"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/server2_name_default"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/server3_card"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_4sdp"
            app:cardBackgroundColor="#1A1A1A">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:scaleType="centerCrop"
                    android:src="@drawable/server3_bg"
                    android:contentDescription="@string/server_3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/tag_soon_bg"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:text="@string/coming_soon"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_9ssp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/_8sdp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/server3_name_default"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
